--- a/Produtos.html
+++ b/Produtos.html
@@ -1,29 +1,25 @@
 <!DOCTYPE HTML>
-<!--
-	Hielo by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
-<html>
-	<head>
-		<title>Hielo by TEMPLATED</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="subpage">
+<head>
+	<title>Trabalho Prático 1</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
+<body>
 
-		<!-- Header -->
-			<header id="header">
-				<div class="logo"><a href="index.html">Hielo <span>by TEMPLATED</span></a></div>
-				<a href="#menu">Menu</a>
-			</header>
+	<!-- Header -->
+		<header id="header" class="alt">
+			<div class="logo"><a href="index.html">Trabalho Prático 1 <span>by Luis Alonso</span></a></div>
+			<a href="#menu">Menu</a>
+		</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
+					<li><a href="index.html">Página Inicial</a></li>
+					<li><a href="Clientes.html">OS Nossos Clientes</a></li>
+					<li><a href="Localizacao.html">A Nossa Localizacao</a></li>
+					<li><a href="Produtos.html">Os Nossos Produtos</a></li>
 					<li><a href="elements.html">Elements</a></li>
 				</ul>
 			</nav>
