--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Hielo by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
 		<title>Trabalho Prático 1</title>
@@ -22,8 +17,10 @@
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
+					<li><a href="index.html">Página Inicial</a></li>
+					<li><a href="Clientes.html">OS Nossos Clientes</a></li>
+					<li><a href="Localizacao.html">A Nossa Localizacao</a></li>
+					<li><a href="Produtos.html">Os Nossos Produtos</a></li>
 					<li><a href="elements.html">Elements</a></li>
 				</ul>
 			</nav>
@@ -31,38 +28,29 @@
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
-					<img src="images/logo2.jpg" alt="" />
+					<img src="https://source.unsplash.com/1600x900/?coffee,black" alt="" />
 					<div class="inner">
 						<header>
-							<p><a href="generic.html"> Descubra a nossa História</a></p>
-							<h2><a href="generic.html">Cafés Lisboa </a></h2>
+							<p><a href="Clientes.html">Os Nossos</a></p>
+							<h2><a href="Clientes.html">Clientes</a></h2>
 						</header>
 					</div>
 				</article>
 				<article>
-					<img src="images/logo3.jpg" alt="" />
+					<img src="https://source.unsplash.com/1600x900/?coffee,white"  alt="" />
 					<div class="inner">
 						<header>
-							<p><a href="generic.html">Os Nossos Clientes</a></p>
-							<h2><a href="generic.html">Clientes</a></h2>
+							<p><a href="Localizacao.html">Onde Nos</a></p>
+							<h2><a href="Localizacao.html">Encontramos</a></h2>
 						</header>
 					</div>
 				</article>
 				<article>
-					<img src="images/logo4.jpg"  alt="" />
+					<img src="https://source.unsplash.com/1600x900/?coffee"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Onde nos encontramos</p>
-							<h2>Localização</h2>
-						</header>
-					</div>
-				</article>
-				<article>
-					<img src="images/logo5.jpeg"  alt="" />
-					<div class="inner">
-						<header>
-							<p>Os nossos artigos</p>
-							<h2>Catálogo</h2>
+							<p><a href="Produtos.html">Os Nossos</a></p>
+							<h2><a href="Produtos.html">Produtos</a></h2>
 						</header>
 					</div>
 				</article>
@@ -76,16 +64,16 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="https://source.unsplash.com/1600x900/?coffee,coffeeshop" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>maecenas sapien feugiat ex purus</p>
-										<h2>Lorem ipsum dolor</h2>
+										<p>Os Nossos</p>
+										<h2>Clientes</h2>
 									</header>
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+									<p>Todos os comércios que fazem parte da nossa pequena Grande Família.</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="Clientes.html" class="button alt">Explorar</a>
 									</footer>
 								</div>
 							</div>
@@ -94,16 +82,16 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="https://source.unsplash.com/1600x900/?coffee,machine" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>mattis elementum sapien pretium tellus</p>
-										<h2>Vestibulum sit amet</h2>
+										<p>A Nossa</p>
+										<h2>Localização</h2>
 									</header>
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+									<p>Mapa com a direção da Nossa Fábrica de fabrico Artesanal. Venha-nos Visitar!</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="Localizacao.html" class="button alt">Explorar</a>
 									</footer>
 								</div>
 							</div>
@@ -117,8 +105,8 @@
 			<section id="two" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-						<h2>Morbi maximus justo</h2>
+						<p>Café Torrado Artesanalmente Através de Meios Naturais</p>
+						<h2>Cafés Lisboa</h2>
 					</header>
 				</div>
 			</section>
@@ -127,31 +115,15 @@
 			<section id="three" class="wrapper style2">
 				<div class="inner">
 					<header class="align-center">
-						<p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-						<h2>Morbi maximus justo</h2>
+						<p class="special">À Mais de 60 Anos a Trazer Sabor à Sua Vida.</p>
+						<h2>A Nossa História</h2>
 					</header>
-					<div class="gallery">
-						<div>
-							<div class="image fit">
-								<a href="#"><img src="images/pic01.jpg" alt="" /></a>
-							</div>
-						</div>
-						<div>
-							<div class="image fit">
-								<a href="#"><img src="images/pic02.jpg" alt="" /></a>
-							</div>
-						</div>
-						<div>
-							<div class="image fit">
-								<a href="#"><img src="images/pic03.jpg" alt="" /></a>
-							</div>
-						</div>
-						<div>
-							<div class="image fit">
-								<a href="#"><img src="images/pic04.jpg" alt="" /></a>
-							</div>
-						</div>
-					</div>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at dignissim augue, in iaculis neque. Etiam bibendum felis ac vulputate pellentesque. Cras non blandit quam. Nunc porta, est non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui vel est tempor faucibus. Aliquam erat volutpat. Quisque vel est vitae nibh laoreet auctor. In nec libero dui. Nulla ullamcorper, dolor nec accumsan viverra, libero eros rutrum metus, vel lacinia magna odio non nunc. Praesent semper felis eu rhoncus aliquam. Donec at quam ac libero vestibulum pretium. Nunc faucibus vel arcu in malesuada. Aenean at velit odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas commodo erat eget molestie sollicitudin. Donec imperdiet, ex sed blandit dictum, ipsum metus ultrices arcu, vitae euismod nisl sapien vitae tortor.</p>
+
+							<p>Vivamus nec odio ac ligula congue feugiat at vitae leo. Aenean sem justo, finibus sed dui eu, accumsan facilisis dolor. Fusce quis dui eget odio iaculis aliquam vel sed velit. Nulla pellentesque posuere semper. Nulla eu sagittis lorem, a auctor nulla. Sed ac condimentum orci, ac varius ante. Nunc blandit quam sit amet sollicitudin sodales.</p>
+
+							<p>Vivamus ultricies mollis mauris quis molestie. Quisque eu mi velit. In et cursus nibh. Donec facilisis, orci sed mollis hendrerit, nunc risus mattis odio, eget efficitur nisl orci a lectus. Aenean finibus neque convallis orci sollicitudin tincidunt. Vivamus lacinia facilisis diam, quis facilisis nisi luctus nec. Aliquam ac molestie enim, ut ultrices elit. Fusce laoreet vulputate risus in tincidunt. Sed commodo mollis maximus. Nullam varius laoreet nibh sit amet facilisis. Donec ac odio vehicula, consequat elit et, sodales justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam ac auctor mauris, in hendrerit libero. </p>
+					
 				</div>
 			</section>
 
@@ -159,6 +131,13 @@
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="container">
+					<link href="https://fonts.googleapis.com/css?family=Montserrat:400,900" rel="stylesheet">
+					<div class="bg"></div>
+						<div>
+   						 <div id="description"></div>
+    					<h1 id="temp"></h1>
+    					<div id="location"></div>
+  						</div>
 					<ul class="icons">
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.facebook.com/cafes.lisboa" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -167,7 +146,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; Luis Alonso 17506. All rights reserved.
 				</div>
 			</footer>
 
@@ -177,6 +156,8 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    		<script src="./assets/js/tempo.js"></script>
 
 	</body>
 </html>
