--- a/Clientes.html
+++ b/Clientes.html
@@ -20,7 +20,6 @@
 					<li><a href="Clientes.html">OS Nossos Clientes</a></li>
 					<li><a href="Localizacao.html">A Nossa Localizacao</a></li>
 					<li><a href="Produtos.html">Os Nossos Produtos</a></li>
-					<li><a href="elements.html">Elements</a></li>
 				</ul>
 			</nav>
 
@@ -28,52 +27,124 @@
 			<section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Eleifend vitae urna</p>
-						<h2>Generic Page Template</h2>
+						<p>A Nossa Familia</p>
+						<h2>Os Nossos Clientes</h2>
 					</header>
 				</div>
 			</section>
 
+
 		<!-- Two -->
-			<section id="two" class="wrapper style2">
-				<div class="inner">
-					<div class="box">
-						<div class="content">
-							<header class="align-center">
-								<p>maecenas sapien feugiat ex purus</p>
-								<h2>Lorem ipsum dolor</h2>
-							</header>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at dignissim augue, in iaculis neque. Etiam bibendum felis ac vulputate pellentesque. Cras non blandit quam. Nunc porta, est non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui vel est tempor faucibus. Aliquam erat volutpat. Quisque vel est vitae nibh laoreet auctor. In nec libero dui. Nulla ullamcorper, dolor nec accumsan viverra, libero eros rutrum metus, vel lacinia magna odio non nunc. Praesent semper felis eu rhoncus aliquam. Donec at quam ac libero vestibulum pretium. Nunc faucibus vel arcu in malesuada. Aenean at velit odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas commodo erat eget molestie sollicitudin. Donec imperdiet, ex sed blandit dictum, ipsum metus ultrices arcu, vitae euismod nisl sapien vitae tortor.</p>
+		<section id="one" class="wrapper style2">
+			<div class="inner">
+				<div class="grid-style">
 
-							<p>Vivamus nec odio ac ligula congue feugiat at vitae leo. Aenean sem justo, finibus sed dui eu, accumsan facilisis dolor. Fusce quis dui eget odio iaculis aliquam vel sed velit. Nulla pellentesque posuere semper. Nulla eu sagittis lorem, a auctor nulla. Sed ac condimentum orci, ac varius ante. Nunc blandit quam sit amet sollicitudin sodales.</p>
-
-							<p>Vivamus ultricies mollis mauris quis molestie. Quisque eu mi velit. In et cursus nibh. Donec facilisis, orci sed mollis hendrerit, nunc risus mattis odio, eget efficitur nisl orci a lectus. Aenean finibus neque convallis orci sollicitudin tincidunt. Vivamus lacinia facilisis diam, quis facilisis nisi luctus nec. Aliquam ac molestie enim, ut ultrices elit. Fusce laoreet vulputate risus in tincidunt. Sed commodo mollis maximus. Nullam varius laoreet nibh sit amet facilisis. Donec ac odio vehicula, consequat elit et, sodales justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam ac auctor mauris, in hendrerit libero. </p>
+					<div>
+						<div class="box">
+							<div class="image fit">
+								<img src="https://source.unsplash.com/1600x900/?coffee,coffeeshop" alt="" />
+							</div>
+							<div class="content">
+								<header class="align-center">
+									<p>Café</p>
+									<h2>Estrela do Norte</h2>
+								</header>
+								<p>Todos os comércios que fazem parte da nossa pequena Grande Família.</p>
+								<footer class="align-center">
+									<a href="Clientes.html" class="button alt">Explorar</a>
+								</footer>
+							</div>
 						</div>
 					</div>
+
+					<div>
+						<div class="box">
+							<div class="image fit">
+								<img src="https://source.unsplash.com/1600x900/?coffee,machine" alt="" />
+							</div>
+							<div class="content">
+								<header class="align-center">
+									<p>Restaurante</p>
+									<h2>O Dias</h2>
+								</header>
+								<p>Mapa com a direção da Nossa Fábrica de fabrico Artesanal. Venha-nos Visitar!</p>
+								<footer class="align-center">
+									<a href="Localizacao.html" class="button alt">Explorar</a>
+								</footer>
+							</div>
+						</div>
+					</div>
+
+					<div>
+						<div class="box">
+							<div class="image fit">
+								<img src="https://source.unsplash.com/1600x900/?coffee,barista" alt="" />
+							</div>
+							<div class="content">
+								<header class="align-center">
+									<p>Café</p>
+									<h2>Lírio</h2>
+								</header>
+								<p>Todos os comércios que fazem parte da nossa pequena Grande Família.</p>
+								<footer class="align-center">
+									<a href="Clientes.html" class="button alt">Explorar</a>
+								</footer>
+							</div>
+						</div>
+					</div>
+
+					<div>
+						<div class="box">
+							<div class="image fit">
+								<img src="https://source.unsplash.com/1600x900/?coffee,lounge" alt="" />
+							</div>
+							<div class="content">
+								<header class="align-center">
+									<p>Bar</p>
+									<h2>A Sogra</h2>
+								</header>
+								<p>Mapa com a direção da Nossa Fábrica de fabrico Artesanal. Venha-nos Visitar!</p>
+								<footer class="align-center">
+									<a href="Localizacao.html" class="button alt">Explorar</a>
+								</footer>
+							</div>
+						</div>
+					</div>
+
 				</div>
-			</section>
+			</div>
+		</section>
 
 		<!-- Footer -->
-			<footer id="footer">
-				<div class="container">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					</ul>
-				</div>
-				<div class="copyright">
-					&copy; Untitled. All rights reserved.
-				</div>
-			</footer>
+		<footer id="footer">
+			<div class="container">
+				<link href="https://fonts.googleapis.com/css?family=Montserrat:400,900" rel="stylesheet">
+				<div class="bg"></div>
+					<div>
+						<div id="description"></div>
+					<h1 id="temp"></h1>
+					<div id="location"></div>
+					  </div>
+				<ul class="icons">
+					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/cafes.lisboa" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+				</ul>
+			</div>
+			<div class="copyright">
+				&copy; Luis Alonso 17506. All rights reserved.
+			</div>
+		</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+		<script src="./assets/js/tempo.js"></script>
 
 	</body>
 </html>
